--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "fastapi[standard] (>=0.115.12,<0.116.0)",
     "sqlalchemy (>=2.0.41,<3.0.0)",
     "pydantic-settings (>=2.9.1,<3.0.0)",
-    "alembic (>=1.16.1,<2.0.0)"
+    "alembic (>=1.16.1,<2.0.0)",
+    "pyjwt (>=2.10.1,<3.0.0)"
 ]
 
 
@@ -31,9 +32,14 @@ select = ['I', 'F', 'E', 'W', 'PL', 'PT']
 preview = true
 quote-style = 'single'
 
+[tool.coverage.run]
+omit = [
+    "app/settings.py"
+]
+
 [tool.pytest.ini_options]
 pythonpath = "."
-addopts = '-p no:warnings'
+addopts = '-p no:warnings --ignore=app/settings.py'
 
 [tool.taskipy.tasks]
 lint = 'ruff check'
